linkwarden/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Linkwarden
    gethomepage.dev/description: Bookmark Manager
    gethomepage.dev/icon: "sh-linkwarden"

spec:
  rules:
  - host: linkwarden
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: linkwarden
              port:
                name: http
